--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:51 -->
+<!-- 2022-12-05 22:16 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb0d4f1b">1. URLs</a>
+<li><a href="#org5ab6706">1. URLs</a>
 <ul>
-<li><a href="#org5f3a9c2">1.1. Info</a></li>
+<li><a href="#org99e753f">1.1. Info</a></li>
 </ul>
 </li>
 <li><a href="#hlinks">2. Headings</a></li>
-<li><a href="#orgf91b336">3. Files</a></li>
-<li><a href="#org1c69b7a">4. Named Elements</a></li>
-<li><a href="#orgdf12680">5. Dedicated Targets</a></li>
-<li><a href="#org36f292a">6. Radio Targets</a></li>
+<li><a href="#org3abbdc9">3. Files</a></li>
+<li><a href="#orgaee076f">4. Named Elements</a></li>
+<li><a href="#orgab981ca">5. Dedicated Targets</a></li>
+<li><a href="#org2aa1a24">6. Radio Targets</a></li>
 <li><a href="#example-section">7. Something to Refer to</a>
 <ul>
-<li><a href="#org4cc5519">7.1. A sub-section</a></li>
+<li><a href="#org287a7a7">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -66,12 +66,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgb0d4f1b" class="outline-2">
-<h2 id="orgb0d4f1b"><span class="section-number-2">1.</span> <a href="#orgb0d4f1b">URLs</a></h2>
+<div id="outline-container-org5ab6706" class="outline-2">
+<h2 id="org5ab6706"><span class="section-number-2">1.</span> <a href="#org5ab6706">URLs</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org5f3a9c2" class="outline-3">
-<h3 id="org5f3a9c2"><span class="section-number-3">1.1.</span> <a href="#org5f3a9c2">Info</a></h3>
+<div id="outline-container-org99e753f" class="outline-3">
+<h3 id="org99e753f"><span class="section-number-3">1.1.</span> <a href="#org99e753f">Info</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
@@ -113,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org1c69b7a">4</a>;<br>
-<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org4cc5519">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#orgaee076f">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org287a7a7">sub-section</a>.<br>
 </p>
 
 <p>
@@ -123,8 +123,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-orgf91b336" class="outline-2">
-<h2 id="orgf91b336"><span class="section-number-2">3.</span> <a href="#orgf91b336">Files</a></h2>
+<div id="outline-container-org3abbdc9" class="outline-2">
+<h2 id="org3abbdc9"><span class="section-number-2">3.</span> <a href="#org3abbdc9">Files</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -134,8 +134,8 @@ can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-org1c69b7a" class="outline-2">
-<h2 id="org1c69b7a"><span class="section-number-2">4.</span> <a href="#org1c69b7a">Named Elements</a></h2>
+<div id="outline-container-orgaee076f" class="outline-2">
+<h2 id="orgaee076f"><span class="section-number-2">4.</span> <a href="#orgaee076f">Named Elements</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
@@ -163,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#org8e4c403">1</a>, Listing <a href="#org1c05e4f">1</a>, and Table <a href="#orgeaec65c">1</a>.
+Fig. <a href="#org0526801">1</a>, Listing <a href="#org1df8235">1</a>, and Table <a href="#org8cd3e18">1</a>.
 </p>
 
 <p>
@@ -180,24 +180,24 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-orgdf12680" class="outline-2">
-<h2 id="orgdf12680"><span class="section-number-2">5.</span> <a href="#orgdf12680">Dedicated Targets</a></h2>
+<div id="outline-container-orgab981ca" class="outline-2">
+<h2 id="orgab981ca"><span class="section-number-2">5.</span> <a href="#orgab981ca">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#orge7d5bf9">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org8691241">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org3ce1656">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orga1ad7c6">lalala</a></li>
+the <a href="#org91b2295">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgc161033">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org36f292a" class="outline-2">
-<h2 id="org36f292a"><span class="section-number-2">6.</span> <a href="#org36f292a">Radio Targets</a></h2>
+<div id="outline-container-org2aa1a24" class="outline-2">
+<h2 id="org2aa1a24"><span class="section-number-2">6.</span> <a href="#org2aa1a24">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -207,14 +207,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#orga6cdc4e">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#org5942fa4">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#org9005d40">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#org7266b44">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#orga6cdc4e">thebesttv</a> and <a href="#org9005d40">do re me</a>.
+Again, <a href="#org5942fa4">thebesttv</a> and <a href="#org7266b44">do re me</a>.
 </p>
 </div>
 </div>
@@ -243,29 +243,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="orge7d5bf9"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="org8691241"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org3ce1656"></a> target in an unordered list</li>
+<li><a id="org91b2295"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="orga1ad7c6"></a> target in an ordered list</li>
+<li><a id="orgc161033"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="orga6cdc4e">thebesttv</a>&#x2014;is a radio target.
-<a id="org9005d40">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="org5942fa4">thebesttv</a>&#x2014;is a radio target.
+<a id="org7266b44">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-org4cc5519" class="outline-3">
-<h3 id="org4cc5519"><span class="section-number-3">7.1.</span> <a href="#org4cc5519">A sub-section</a></h3>
+<div id="outline-container-org287a7a7" class="outline-3">
+<h3 id="org287a7a7"><span class="section-number-3">7.1.</span> <a href="#org287a7a7">A sub-section</a></h3>
 <div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
@@ -290,20 +290,20 @@ This word&#x2014;<a id="orga6cdc4e">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="org8e4c403">
+<figure id="org0526801">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org1c05e4f">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org1df8235">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="orgeaec65c">
+<table id="org8cd3e18">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -338,10 +338,10 @@ This word&#x2014;<a id="orga6cdc4e">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#orga6cdc4e">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org5942fa4">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:51</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/emacs/org-hyperlink.org">content/emacs/org-hyperlink.org</a></td></tr>
 </table>
