--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:51 -->
+<!-- 2022-12-05 22:16 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org65b1bbe">1. What is Vectored IO</a></li>
-<li><a href="#org9ffc93c">2. Vectored IO in Linux</a></li>
-<li><a href="#orgc29642f">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org5eb964a">4. Examples</a>
+<li><a href="#org6d928cb">1. What is Vectored IO</a></li>
+<li><a href="#org445dcba">2. Vectored IO in Linux</a></li>
+<li><a href="#org2f9dc36">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#orge489cca">4. Examples</a>
 <ul>
-<li><a href="#orgff6463f">4.1. <code>write()</code></a></li>
-<li><a href="#orgfbda2cc">4.2. <code>writev()</code></a></li>
+<li><a href="#orgc6122b6">4.1. <code>write()</code></a></li>
+<li><a href="#orgdc454c8">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org65b1bbe" class="outline-2">
-<h2 id="org65b1bbe"><span class="section-number-2">1.</span> <a href="#org65b1bbe">What is Vectored IO</a></h2>
+<div id="outline-container-org6d928cb" class="outline-2">
+<h2 id="org6d928cb"><span class="section-number-2">1.</span> <a href="#org6d928cb">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org9ffc93c" class="outline-2">
-<h2 id="org9ffc93c"><span class="section-number-2">2.</span> <a href="#org9ffc93c">Vectored IO in Linux</a></h2>
+<div id="outline-container-org445dcba" class="outline-2">
+<h2 id="org445dcba"><span class="section-number-2">2.</span> <a href="#org445dcba">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orgc29642f" class="outline-2">
-<h2 id="orgc29642f"><span class="section-number-2">3.</span> <a href="#orgc29642f">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org2f9dc36" class="outline-2">
+<h2 id="org2f9dc36"><span class="section-number-2">3.</span> <a href="#org2f9dc36">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org5eb964a" class="outline-2">
-<h2 id="org5eb964a"><span class="section-number-2">4.</span> <a href="#org5eb964a">Examples</a></h2>
+<div id="outline-container-orge489cca" class="outline-2">
+<h2 id="orge489cca"><span class="section-number-2">4.</span> <a href="#orge489cca">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgff6463f" class="outline-3">
-<h3 id="orgff6463f"><span class="section-number-3">4.1.</span> <a href="#orgff6463f"><code>write()</code></a></h3>
+<div id="outline-container-orgc6122b6" class="outline-3">
+<h3 id="orgc6122b6"><span class="section-number-3">4.1.</span> <a href="#orgc6122b6"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgfbda2cc" class="outline-3">
-<h3 id="orgfbda2cc"><span class="section-number-3">4.2.</span> <a href="#orgfbda2cc"><code>writev()</code></a></h3>
+<div id="outline-container-orgdc454c8" class="outline-3">
+<h3 id="orgdc454c8"><span class="section-number-3">4.2.</span> <a href="#orgdc454c8"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:51</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
